always show scrollbars to prevent page from doing weird things

--- a/app2.less
+++ b/app2.less
@@ -5,6 +5,11 @@
   padding-top: 18px;
 }
 
+body {
+  overflow: -moz-scrollbars-vertical;
+  overflow-y: scroll;
+}
+
 body.waiting-for-angular div#content-outer {
   display: none;
 }
